# transdock

./: .env.example  .gitignore  BACKEND_REORGANIZATION_PROPOSAL.md  CURRENT_VS_PROPOSED_STRUCTURE.md  DOCKER_API_IMPLEMENTATION.md  DOCKER_API_MIGRATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  MIGRATION_SERVICE_REFACTORING.md  PR_FEEDBACK.md  README.md  REORGANIZATION_PROGRESS.md  REORGANIZATION_SUMMARY.md  ZFS_REFACTORING_PROPOSAL.md  bug_report.md  docker_api_migration_analysis.md  docker_ops_enhancement_analysis.md  main.py  pyproject.toml  pytest.ini  pytest.ini.broken  requirements.txt  transdock.sh  transfer_ops.py  zfs_ops.py
backend/: PHASE_3_SUMMARY.md  __init__.py  config.py  demo_new_architecture.py  docker_ops.py  example.py  host_service.py  main.py  migration_service.py  migration_service_refactored.py  models.py  requirements-phase3.txt  requirements.txt  security_utils.py  transfer_ops.py  utils.py  zfs_ops.py
backend/api/: __init__.py  auth.py  dependencies.py  middleware.py  models.py  rate_limiting.py  websocket.py
backend/application/: __init__.py
backend/core/: __init__.py
backend/infrastructure/: __init__.py
backend/services/: __init__.py  compose_stack_service.py  container_discovery_service.py  container_migration_service.py  migration_orchestrator.py  snapshot_service.py  system_info_service.py
backend/tests/: test_api.py
docs/: API.md  TESTING.md
frontend/: README.md
scripts/: start-backend.sh  start.sh
tests/: conftest.py
tests/fixtures/: test_data.py
tests/integration/: test_api_endpoints.py  test_migration_workflow.py
(+83 files in other folders)
